--- a/package.json
+++ b/package.json
@@ -39,11 +39,14 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
+    "clone": "^1.0.2",
     "cors": "^2.7.1",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
     "socket.io": "^1.4.8",
     "superagent": "^2.0.0",
     "wordnik-bb": "^0.1.1"
