--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "watchify src/index.js -o public/bundle.js -dv",
+    "watch": "watchify client/index.js -o public/bundle.js -dv",
     "start-dev": "babel-node server.js"
   },
   "repository": {
@@ -36,6 +36,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
+    "sqlite3": "^3.1.4",
     "watchify": "^3.7.0"
   },
   "dependencies": {
@@ -43,11 +44,16 @@
     "cors": "^2.7.1",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "knex": "^0.11.7",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
     "react-redux": "^4.4.5",
+    "react-router": "^2.5.2",
     "redux": "^3.5.2",
     "socket.io": "^1.4.8",
+    "socket.io-client": "^1.4.8",
     "superagent": "^2.0.0",
     "wordnik-bb": "^0.1.1"
   }
