--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "watchify client/index.js -o public/bundle.js -dv",
-    "start-dev": "babel-node server.js"
+    "start-dev": "babel-watch server.js"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "babel-core": "^6.10.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "babel-watch": "^2.0.2",
     "babelify": "^7.3.0",
     "sqlite3": "^3.1.4",
     "watchify": "^3.7.0"
