--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "watchify client/index.js -o public/bundle.js -dv",
+    "watch": "watchify client/src/index.js -o public/bundle.js -dv",
+    "build-css": "node-sass --include-path client/sass client/sass/main.sass public/main.css",
     "start-dev": "babel-watch server.js"
   },
   "repository": {
@@ -42,12 +43,8 @@
   },
   "dependencies": {
     "clone": "^1.0.2",
-    "cors": "^2.7.1",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
-    "knex": "^0.11.7",
-    "passport": "^0.3.2",
-    "passport-facebook": "^2.1.1",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
     "react-redux": "^4.4.5",
