add font styling to login and nav

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "watchify client/src/index.js -o public/bundle.js -dv",
+    "watch-css": "nodemon -e sass -x \"npm run build-css\"",
     "build-client": "browserify client/src/index.js -o public/bundle.js -dv",
     "build-css": "node-sass --include-path client/sass client/sass/main.sass public/main.css",
     "start-dev": "babel-watch src/server.js",
@@ -43,6 +44,7 @@
     "babel-watch": "^2.0.2",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
+    "nodemon": "^1.9.2",
     "sqlite3": "^3.1.4",
     "watchify": "^3.7.0"
   },
